<resources>
    <string name="app_name">Fitness Pal</string>
    <string name="food_name_format">Name: %1$s (%2$s)</string>
    <string name="food_status_format">Calorie: %1$.2f Carb: %2$.2f\nProtein: %3$.2f Fat: %4$.2f</string>
    <string name="home_footer_text">Tap the plus icon to take a photo of the food you want to scan. Then click next make the prediction.</string>
    <string name="email_address_text">Email Address</string>
    <string name="password_text">Password</string>
    <string name="not_a_user_yet_text">Not a user yet?</string>
    <string name="click_here_text">Click here.</string>
    <string name="login_text">Login</string>
    <string name="first_name_text">First Name</string>
    <string name="last_name_text">Last Name</string>
    <string name="register_text">Register</string>
    <string name="already_a_member_text">Already a member?</string>
    <string name="sign_in_text">Sign In.</string>
    <string name="select_image_from_album">Select image from album</string>
    <string name="take_photo">Take photo</string>
    <string name="add_text">Add</string>
    <string name="loading_text">Loading</string>
    <string name="food_item_detail_list">
        Calorie: %1$.2f\nCarb: %2$.2f\nProtein: %3$.2f\nFat: %4$.2f
    </string>
    <string name="foods_format">Foods (Calories Today: %1$.2f)</string>
    <string name="x_format">x%1$d</string>
</resources>
