<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.home.HomeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/homeToolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeToolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/vertical_margin"
            android:paddingBottom="@dimen/vertical_margin_large">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/horizontal_margin_large"
                android:layout_marginEnd="@dimen/horizontal_margin_large"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="@dimen/horizontal_margin"
                app:cardElevation="0dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/preview"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:visibility="visible" />

                    <ImageView
                        android:id="@+id/createIcon"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@drawable/background_create_pass"
                        android:src="@drawable/ic_plus_dark"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/clearIcon"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_margin="@dimen/vertical_margin"
                        android:background="@drawable/background_create_pass"
                        android:foreground="?selectableItemBackground"
                        android:rotation="45"
                        android:src="@drawable/ic_plus_dark"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/foodStatusLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorAccent"
                        android:padding="@dimen/vertical_margin_small"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:visibility="visible">

                        <TextView
                            android:id="@+id/foodName"
                            style="@style/TextAppearance.Item.Header"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/horizontal_margin"
                            android:text="@string/food_name_format"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/foodStatus"
                            style="@style/TextAppearance.Item.Header"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/horizontal_margin"
                            android:text="@string/food_status_format"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/foodName" />


                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


            <androidx.constraintlayout.widget.Group
                android:id="@+id/addLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="itemCount,addBtn"
                tools:visibility="visible" />

            <NumberPicker
                android:id="@+id/itemCount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin_large"
                android:layout_marginEnd="@dimen/horizontal_margin_large"
                android:background="@android:color/transparent"
                android:descendantFocusability="blocksDescendants"
                app:layout_constraintBottom_toTopOf="@id/footer"
                app:layout_constraintEnd_toStartOf="@id/addBtn"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardView" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addBtn"
                style="@style/Navigation.Button.Dark"
                android:layout_width="0dp"
                android:layout_marginStart="@dimen/horizontal_margin_large"
                android:layout_marginEnd="@dimen/horizontal_margin_large"
                android:text="@string/add_text"
                app:layout_constraintBottom_toBottomOf="@id/itemCount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/itemCount"
                app:layout_constraintTop_toTopOf="@id/itemCount" />

            <TextView
                android:id="@+id/footer"
                style="@style/Widget.Footer.Text"
                android:text="@string/home_footer_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>